[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/lvl4/fin-1.png" type="Texture" id=1]
[ext_resource path="res://assets/lvl4/fin-2.png" type="Texture" id=2]
[ext_resource path="res://assets/lvl4/fin-3.png" type="Texture" id=3]
[ext_resource path="res://lvl-common/CollisionShape2D.gd" type="Script" id=4]
[ext_resource path="res://lvl-common/FinDetector.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 47.5053

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="FinDetector" type="Node2D"]
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
script = ExtResource( 4 )

[node name="Fin" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
[connection signal="body_entered" from="Area2D" to="Area2D/CollisionShape2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D/CollisionShape2D" method="_on_Area2D_body_exited"]
[connection signal="have_players" from="Area2D/CollisionShape2D" to="." method="_on_CollisionShape2D_have_players"]
